--- a/SWTKal/SwingGUI/pom.xml
+++ b/SWTKal/SwingGUI/pom.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>swtkal.swinggui</groupId>
-    <artifactId>SWTKal.SwingGUI</artifactId>
+    <groupId>swtkal.swing</groupId>
+    <artifactId>SwingGUI</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -16,8 +16,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>swtkal.base</groupId>
-            <artifactId>SWTKal.Base</artifactId>
+            <groupId>swtkal</groupId>
+            <artifactId>Base</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
